--- a/1808107010026.html
+++ b/1808107010026.html
@@ -1,7 +1,1 @@
-<body>
-<table border=”0”>
-<tr><td>Daftar anggota</td></tr>
-<tr><td><a href="1808107010026.html">1808107010026.html</a></td></tr>
-</table>
-</body>
-</html>
+Ahmad Zaky- 1808107010026
