--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Utama – Admin</title>
-</head>
-<body>
-<table border=”0”>
-<tr><td>Daftar anggota</td></tr>
-<tr><td><a href="1808107010026.html">1808107010026.html</a></td></tr>
-</table>
+    <head>
+        <title>Utama – Admin</title>
+    </head>
+    <body>
+        <table border=”0”>
+        <tr>
+            <td>Daftar anggota</td>
+        </tr>
+    <tr>
+        <td><a href="1808107010026.html">1808107010026.html</a></td>
+    </tr>
+    </table>
 </body>
 </html>
