--- a/index.html
+++ b/index.html
@@ -12,10 +12,14 @@
             <td>Tidak ada anggota.</td>
         </tr>
         <tr>
-            <td><a href="1808107010031.html">NPM</a></td>
+            <td><a href="1808107010031.html">1808107010031</a></td>
         </tr>
-            <tr><td><a href="1808107010012.html">NPM</a></td></tr>
-<tr><td><a href="1808107010029.html">1808107010029.html</a></td></tr>
+        <tr>
+            <td><a href="1808107010012.html">1808107010012</a></td>
+        </tr>
+        <tr>
+            <td><a href="1808107010029.html">1808107010029</a></td>
+        </tr>
     </table>
 </body>
 </html>
