--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 <body>
 <table border=”0”>
 <tr><td>Daftar anggota</td></tr>
-<tr><td><a href="1808107010032.html">1808107010032.html</a></td></tr>
+	<tr>
+	    <td><a href="1808107010032.html">1808107010032</a></td>
+	</tr>
 </table>
 </body>
 </html>
